# src/Api/models/Seller.ts
@@ -118,6 +118,12 @@ export interface Seller {
     'username'?: string;
     /**
      * 
+     * @type {boolean}
+     * @memberof Seller
+     */
+    'signedOut'?: boolean;
+    /**
+     * 
      * @type {Array<GrantedAuthority>}
      * @memberof Seller
      */
@@ -128,12 +134,6 @@ export interface Seller {
      * @memberof Seller
      */
     'vat'?: string;
-    /**
-     * 
-     * @type {boolean}
-     * @memberof Seller
-     */
-    'signedOut'?: boolean;
     /**
      * 
      * @type {boolean}
