# src/Api/models/pageable-object.ts
@@ -40,6 +40,12 @@ export interface PageableObject {
      * @type {number}
      * @memberof PageableObject
      */
+    'pageNumber'?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof PageableObject
+     */
     'pageSize'?: number;
     /**
      * 
@@ -47,12 +53,6 @@ export interface PageableObject {
      * @memberof PageableObject
      */
     'paged'?: boolean;
-    /**
-     * 
-     * @type {number}
-     * @memberof PageableObject
-     */
-    'pageNumber'?: number;
     /**
      * 
      * @type {boolean}
