# src/Api/models/result-list-deal.ts
@@ -1,0 +1,51 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI definition
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+// May contain unused imports in some cases
+// @ts-ignore
+import type { Deal } from './deal';
+
+/**
+ * 
+ * @export
+ * @interface ResultListDeal
+ */
+export interface ResultListDeal {
+    /**
+     * 
+     * @type {boolean}
+     * @memberof ResultListDeal
+     */
+    'success'?: boolean;
+    /**
+     * 
+     * @type {number}
+     * @memberof ResultListDeal
+     */
+    'code'?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof ResultListDeal
+     */
+    'message'?: string;
+    /**
+     * 
+     * @type {Array<Deal>}
+     * @memberof ResultListDeal
+     */
+    'data'?: Array<Deal>;
+}
+
